# sudachi

./: .gitignore  AGENTS.md  CLAUDE.md  COMPREHENSION_PIPELINE.md  Cargo.toml  README.md  justfile
crates/sudachi-kwja/: AGENTS.md  CHECKPOINTS.md  CLAUDE.md  Cargo.toml  README.md
crates/sudachi-kwja-optimizer/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/sudachi-kwja-optimizer/src/: doc_features.rs  lib.rs  lookup.rs  optimizer.rs  pipeline.rs  stage.rs
crates/sudachi-kwja-optimizer/src/filter/: mod.rs  ne.rs
crates/sudachi-kwja-optimizer/src/normalize/: mod.rs
crates/sudachi-kwja-optimizer/src/validate/: mod.rs
crates/sudachi-kwja/examples/: dump_tensor_names.rs  test_pos_mapping.rs
crates/sudachi-kwja/resources/: labels.json
crates/sudachi-kwja/scripts/: convert_checkpoints.py  gen_fixtures.py  pyproject.toml
crates/sudachi-kwja/src/: checkpoint.rs  constants.rs  crf.rs  error.rs  lib.rs  pipeline.rs
crates/sudachi-kwja/src/document/: mod.rs  tree.rs
crates/sudachi-kwja/src/model/: char_.rs  deberta.rs  heads.rs  mod.rs  pool.rs  typo.rs  word.rs
crates/sudachi-kwja/src/tokenizer/: char_.rs  deberta.rs  mod.rs  typo.rs
crates/sudachi-kwja/tests/: bucketing_config.rs
crates/sudachi-kwja/tests/equivalence/: bp_features.json  cohesion.json  dependency_types.json  discourse.json  typo.json  word_features.json
crates/sudachi-morphology/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/sudachi-morphology/benches/: deconjugate.rs
crates/sudachi-morphology/data/: deconjugation_rules.json
crates/sudachi-morphology/src/: adjective.rs  conjugation.rs  copula.rs  deconjugate.rs  irregular.rs  kana.rs  lib.rs  rule.rs  rule_index.rs  tag.rs  verb.rs  verb_class.rs
crates/sudachi-morphology/tests/: golden.rs  round_trip.rs
crates/sudachi-morphology/tests/golden/: adj_i.rs  cop.rs  v1.rs  v1_s.rs  v4r.rs  v5_aru.rs  v5_b.rs  v5_g.rs  v5_k.rs  v5_k_s.rs  v5_m.rs  v5_n.rs  v5_r.rs  v5_r_i.rs  v5_s.rs  v5_t.rs  v5_u.rs  v5_u_s.rs  vk.rs  vs_c.rs  vs_i.rs  vs_s.rs  vz.rs
crates/sudachi-optimizer/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/sudachi-optimizer/examples/: jiten_regression.rs
crates/sudachi-optimizer/src/: data.rs  lib.rs  lookup.rs  optimizer.rs  pipeline.rs  stage.rs  sudachi.rs  token.rs  token_features.rs  tokenizer.rs
crates/sudachi-optimizer/src/cleanup/: filter_misparse.rs  mod.rs  reclassify_orphaned_suffixes.rs
crates/sudachi-optimizer/src/combine/: adverbial_particle.rs  amounts.rs  auxiliary.rs  auxiliary_verb_stem.rs  conjunctive_particle.rs  final_.rs  inflections.rs  mod.rs  particles.rs  prefixes.rs  suffix.rs  to_naru.rs  tte.rs  verb_dependant.rs
crates/sudachi-optimizer/src/disambiguation/: fix_reading_ambiguity.rs  mod.rs
crates/sudachi-optimizer/src/repair/: colloquial_negative_nee.rs  colloquial_ran_nai.rs  compound_noun_suffix.rs  fused_interjection_particle.rs  hasa_noun.rs  honorific_lemma.rs  mod.rs  n_tokenisation.rs  orphaned_auxiliary.rs  process_special_cases.rs  tanka_to_ta_n_ka.rs  vowel_elongation.rs
crates/sudachi-optimizer/src/split/: compound_auxiliary_verbs.rs  mod.rs  proper_noun_with_particle.rs  tan_suffix.rs  tatte_particle.rs  tawake_noun.rs
crates/sudachi-optimizer/tests/: dictionary_form_invariant.rs
crates/sudachi-postgres/: AGENTS.md  CLAUDE.md  README.md  justfile
crates/sudachi-postgres/docker/: Dockerfile  pg_search--0.20.6.sql
crates/sudachi-postgres/pg_search/: Cargo.toml
crates/sudachi-postgres/pg_search/src/api/tokenizers/: definitions.rs  mod.rs
crates/sudachi-postgres/pg_search/src/api/tokenizers/typmod/: definitions.rs  mod.rs
crates/sudachi-postgres/tokenizers/: Cargo.toml
crates/sudachi-postgres/tokenizers/src/: lib.rs  manager.rs  sudachi.rs
crates/sudachi-search/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
crates/sudachi-search/examples/: full_info.rs  tokenize.rs
crates/sudachi-search/src/: lib.rs
crates/sudachi-search/tests/: integration.rs
crates/sudachi-sqlite/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
crates/sudachi-sqlite/src/: common.rs  extension.rs  lib.rs
crates/sudachi-tantivy/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/sudachi-tantivy/src/: lib.rs  stream.rs  tokenizer.rs
crates/sudachi-wasm/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  wasm-pack-inline.mjs
crates/sudachi-wasm/example/: index.html  node.mjs  package.json
crates/sudachi-wasm/src/: cache.rs  lib.rs
crates/sudachi-wasm/src/analysis/: lattice.rs  mlist.rs
crates/sudachi-wasm/src/dic/: grammar.rs  mod.rs
crates/sudachi-wasm/src/dic/lexicon/: word_infos.rs
crates/sudachi-wasm/src/util/: macros.rs  mod.rs
crates/sudachi-wasm/src/wasm/: compression.rs  mod.rs  types.rs
crates/sudachi-wasm/test/: browser.html  node_stateful.mjs  special_chars.mjs
crates/sudachi-wasm/wasm/: CHANGELOG.md  Cargo.toml
crates/sudachi-wasm/wasm/src/: lib.rs
crates/sudachi-wasm/wasm/src/dic/lexicon/: word_id_table.rs
crates/sudachi-wasm/wasm/src/plugin/: loader.rs  mod.rs
crates/sudachi-wasm/wasm/src/plugin/input_text/default_input_text/: mod.rs
crates/sudachi-wasm/wasm/src/wasm/: fetch.rs
docker/postgres/: CLAUDE.md  Dockerfile  README.md  SUDACHI.md
plans/: panel-sudachi-cleanup.md
wasm/: justfile
wasm/src/analysis/: morpheme.rs  stateful_tokenizer.rs  stateless_tokenizer.rs
wasm/src/dic/: character_category.rs
wasm/src/dic/lexicon/: mod.rs  word_params.rs
wasm/src/input_text/buffer/: edit.rs
wasm/src/plugin/oov/mecab_oov/: mod.rs
wasm/src/wasm/: error.rs  stateful.rs  stateless.rs
wasm/test/: node.mjs
