[workspace]
resolver = "2"
members = [
    "crates/sudachi-search",
    "crates/sudachi-sqlite",
    "crates/sudachi-tantivy",
]
# Note: wasm/ and docker/postgres/ are separate build targets (wasm-pack, Docker),
# not Cargo workspace members.

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jurmarcus/sudachi"
rust-version = "1.85"

[workspace.dependencies]
# Upstream sudachi.rs — pinned to a known-good commit for reproducible builds.
# To update: run `cargo update -p sudachi` and commit the new Cargo.lock.
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs", rev = "b568decbbd4ea209dec847821dc1f5069a0f2ff5" }
sudachi-search = { path = "crates/sudachi-search" }
libc = { version = "0.2", default-features = false }
sqlite-loadable = "0.0.5"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
