[workspace]
resolver = "2"
members = [
    "crates/sudachi-kwja",
    "crates/sudachi-kwja-optimizer",
    "crates/sudachi-morphology",
    "crates/sudachi-optimizer",
    "crates/sudachi-search",
    "crates/sudachi-sqlite",
    "crates/sudachi-tantivy",
    "crates/sudachi-wasm",
]
# Note: wasm/ and docker/postgres/ are separate build targets (wasm-pack, Docker),
# not Cargo workspace members.

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jurmarcus/sudachi"
rust-version = "1.85"

[workspace.dependencies]
# jurmarcus/sudachi.rs — fork carrying performance + WASM additions on top
# of upstream's develop. See ~/notes/projects/sudachi-rs/ for the full
# story of what this fork adds. DIRECT use is restricted to
# sudachi-optimizer; everything else imports through sudachi-optimizer's
# re-exports so post-tokenisation rules apply uniformly across consumers.
sudachi = { git = "https://github.com/jurmarcus/sudachi.rs", rev = "4473f8137e08ce9ad909cde1a8ec74546f4f34e0" }
sudachi-kwja = { path = "crates/sudachi-kwja" }
sudachi-kwja-optimizer = { path = "crates/sudachi-kwja-optimizer" }
sudachi-morphology = { path = "crates/sudachi-morphology" }
sudachi-optimizer = { path = "crates/sudachi-optimizer" }
sudachi-search = { path = "crates/sudachi-search" }
libc = { version = "0.2", default-features = false }
sqlite-loadable = "0.0.5"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
