[package]
name = "sudachi-kwja"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust KWJA (Kyoto-Waseda Japanese Analyzer) inference, pre-tokenized via Sudachi"
keywords = ["japanese", "tokenizer", "nlp", "kwja", "sudachi"]
categories = ["text-processing", "internationalization"]

[lints]
workspace = true

[features]
default = ["metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda",  "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
