[package]
name = "sudachi-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-granularity Japanese tokenization for search engines using Sudachi"
keywords = ["japanese", "tokenizer", "search", "nlp", "sudachi"]
categories = ["text-processing", "internationalization"]

[lints]
workspace = true

[dependencies]
# Reach Sudachi types through sudachi-optimizer so the optimisation
# rules can apply uniformly across all consumers. Direct `sudachi`
# dependency is restricted to sudachi-optimizer.
sudachi-optimizer.workspace = true
