[package]
name = "sudachi-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sudachi tokenizer for SQLite FTS5 full-text search"
keywords = ["japanese", "tokenizer", "sqlite", "fts5", "morphological-analysis"]
categories = ["text-processing", "database"]

[lib]
crate-type = ["cdylib"]  # Loadable SQLite extension

[dependencies]
libc = { version = "0.2", default-features = false }
sqlite-loadable = "0.0.5"
sqlite3ext-sys = "0.0.1"
sudachi.workspace = true
sudachi-search.workspace = true

[features]
default = []
