[package]
name = "sudachi-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sudachi tokenizer for SQLite FTS5 full-text search"
keywords = ["japanese", "tokenizer", "sqlite", "fts5", "morphological-analysis"]
categories = ["text-processing", "database"]

[lib]
# cdylib: loadable SQLite extension (.so/.dylib)
# rlib: enables #[test] items — required for `cargo test -p sudachi-sqlite`
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
libc.workspace = true
sqlite-loadable.workspace = true
sqlite3ext-sys = "0.0.1" # for sqlite3_stmt (not in sqlite-loadable's prelude)
sudachi.workspace = true
sudachi-search.workspace = true

[features]
default = []
