[package]
name = "sudachi-tantivy"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jurmarcus/sudachi"
description = "Tantivy tokenizer adapter for sudachi-search (B+C multi-granularity)"
# Not published yet — implementation pending
publish = false

[dependencies]
sudachi-search = { path = "../sudachi-search" }
