[package]
name = "sudachi-tantivy"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Sudachi tokenizer for Tantivy full-text search"
repository = "https://github.com/jurmarcus/sudachi"
keywords = ["japanese", "tokenizer", "tantivy", "nlp", "morphological-analysis"]
categories = ["text-processing", "internationalization"]
publish = false

[dependencies]
tantivy-tokenizer-api = "0.6.0"
sudachi.workspace = true
sudachi-search.workspace = true
