[package]
name = "sudachi-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"
description = "WebAssembly distribution of sudachi.rs for browser and Node.js"
readme = "README.md"
repository = "https://github.com/jurmarcus/sudachi"
license = "MIT"
# Upstream: https://github.com/Benjas333/sudachi-wasm333
# Not published — built via wasm-pack, not cargo publish

[dependencies] # this should be sorted
aho-corasick = "1" # MIT/Apache 2.0
bitflags = "2.5" # MIT/Apache 2.0
brotli = "7" # MIT
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
csv = "1.3" # Unilicense/MIT
fancy-regex = "0.13" # MIT
flate2 = "1" # MIT/Apache 2.0
futures-channel = "0.3" # MIT/Apache 2.0
indexmap = "2.2" # MIT/Apache 2.0
js-sys = "0.3" # MIT/Apache 2.0
itertools = "0.13" # MIT/Apachie 2.0
lazy_static = "1.4" # MIT/Apache 2.0
libloading = { version = "0.8", optional = true } # ISC (MIT-compatible)
log = "0.4.28"
memmap2 = "0.9" # MIT/Apache 2.0
nom = "7" # MIT
regex = "1" # MIT/Apache 2.0
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0" # MIT/Apache 2.0
thiserror = "1.0" # MIT/Apache 2.0
tsify = { version = "0.5.5", features = ["js"] }
unicode-normalization = "0.1" # MIT/Apache 2.0
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
yada = "0.5" # MIT/Apache 2.0

[dependencies.web-sys]
version = "0.3"
features = [
  "Response",
  "Request",
  "RequestInit",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "Headers",
  "Window",
  # IndexedDB for dictionary caching
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbVersionChangeEvent",
  "DomStringList",
]

[features]
default = ["console_error_panic_hook", "console_log"]
native-plugins = ["libloading"]  # Enable dynamic plugin loading (native only)

[package.metadata.wasm-pack.profile.release]
# -Oz = optimize aggressively for size
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dev-dependencies]
claim = "0.5" # MIT/Apache 2.0
tempfile = "3" # MIT/Apache 2.0

[lib]
crate-type = ["cdylib"]
